# pi-eink-ipc

./: .gitignore  README.md
C/: CMakeLists.txt  json_types.c  json_types.h  socket_test.c
C/utils/: message.c  message.h
Python/: .env  config.py  launch.json  main.py
Python/GraphQL/: chapter.py  exntesion.py  graphql_manager.py  manga.py  settings.py  source.py  types.py
Python/ipc/: ipc_types.py  socket_test.py  unix_socket.py
Python/utils/: debug.py  image.py  message.py
